--- a/vignettes/more-ernest-runs.Rmd
+++ b/vignettes/more-ernest-runs.Rmd
@@ -41,7 +41,7 @@ gaussian_shell <- function(n_dim) {
   w <- 0.1 # Shell width
   const <- log(1 / sqrt(2 * pi * w^2))
 
-  # Single-shell log likelihood
+  # Single-shell log-likelihood
   log_lik_shell <- function(theta, c) {
     d <- sqrt(sum((theta - c)^2))
     const - (d - r)^2 / (2 * w^2)
@@ -123,7 +123,7 @@ We can plot the run to examine how our evidence estimates changed over time:
 plot(run_eggbox)
 ```
 
-Additionally, we can use `calculate` to simulate uncertainty around our log volume estimates. As a shortcut, we can use `plot` with a non-zero `ndraws` argument.
+Additionally, we can use `calculate` to simulate uncertainty around our log-volume estimates. As a shortcut, we can use `plot` with a non-zero `ndraws` argument.
 
 ```{r}
 plot(run_eggbox, ndraws = 100)
