--- a/README.Rmd
+++ b/README.Rmd
@@ -1,4 +1,4 @@
---- 
+---
 output: github_document
 bibliography: vignettes/references.bib
 ---
@@ -15,6 +15,7 @@ knitr::opts_chunk$set(
 ```
 
 # A Toolkit for Nested Sampling
+
 ```{r srr, eval = FALSE, echo = FALSE}
 #' SRR STATS BLOCK
 #' 
@@ -23,15 +24,16 @@ knitr::opts_chunk$set(
 ```
 
 <!-- badges: start -->
-[![R-CMD-check](https://github.com/kylesnap/ernest/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/kylesnap/ernest/actions/workflows/R-CMD-check.yaml)
-[![codecov](https://codecov.io/gh/kylesnap/ernest/branch/ropensci_submission/graph/badge.svg?token=6HL8L046Y7)](https://codecov.io/gh/kylesnap/ernest)
+
+[![R-CMD-check](https://github.com/kylesnap/ernest/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/kylesnap/ernest/actions/workflows/R-CMD-check.yaml) [![codecov](https://codecov.io/gh/kylesnap/ernest/branch/ropensci_submission/graph/badge.svg?token=6HL8L046Y7)](https://codecov.io/gh/kylesnap/ernest)
+
 <!-- badges: end -->
 
 ernest is a comprehensive toolkit for nested sampling (NS) in R, enabling estimation of Bayesian evidence and posterior distributions for statistical models. Alongside an original R-based implementation of the algorithm described by @skilling2006, ernest provides:
 
-1. S3 objects and methods for defining model likelihoods and prior parameter distributions;
-2. Methods for simulating, reporting, and visualising uncertainty in NS estimates;
-3. S3 generics for developers to implement custom likelihood-restricted prior samplers.
+1.  S3 objects and methods for defining model likelihoods and prior parameter distributions;
+2.  Methods for simulating, reporting, and visualising uncertainty in NS estimates;
+3.  S3 generics for developers to implement custom likelihood-restricted prior samplers.
 
 ernest's API is inspired by the Python package nestle [@barbary2015], which also influenced dynesty [@speagle2020].
 
@@ -39,23 +41,21 @@ ernest's API is inspired by the Python package nestle [@barbary2015], which also
 
 Install the development version of ernest from [GitHub](https://github.com/) with:
 
-```r
+``` r
 # install.packages("devtools")
 devtools::install_github("kylesnap/ernest")
 ```
 
 ## Nested Sampling in a Nutshell
 
-Nested sampling (NS) is a Bayesian algorithm for evaluating model plausibility, measured as the *Bayesian evidence* or *marginal likelihood* ($\mathcal{Z}$). The evidence normalises the posterior distribution; by reorganising Bayes' theorem, we see that $\mathcal{Z}$ is the probability of the observed data across all possible parameter values $\theta$:
-$$
+Nested sampling (NS) is a Bayesian algorithm for evaluating model plausibility, measured as the *Bayesian evidence* or *marginal likelihood* ($\mathcal{Z}$). The evidence normalises the posterior distribution; by reorganising Bayes' theorem, we see that $\mathcal{Z}$ is the probability of the observed data across all possible parameter values $\theta$: $$
 \mathcal{Z} = \int_{\forall \theta} L(\theta) \pi(\theta) d\theta
-$$
-For most models, this integral cannot be solved analytically. NS addresses this by dividing the prior space $\pi(\theta)$ into a nested sequence of small volumes, sorted by likelihood, to form a one-dimensional approximation of the evidence integral. NS offers several advantages over other Bayesian methods such as Markov chain Monte Carlo (MCMC):
+$$ For most models, this integral cannot be solved analytically. NS addresses this by dividing the prior space $\pi(\theta)$ into a nested sequence of small volumes, sorted by likelihood, to form a one-dimensional approximation of the evidence integral. NS offers several advantages over other Bayesian methods such as Markov chain Monte Carlo (MCMC):
 
-1. Global exploration of $\pi(\theta)$;
-2. Robustness to complex or poorly conditioned distributions (e.g., multimodal or discontinuous);
-3. Simultaneous estimation of the posterior distribution;
-4. Natural stopping criteria—no need for burn-in or manual convergence checks.
+1.  NS performs a global exploration of $\pi(\theta)$;
+2.  NS is robust to distributions that are poorly-conditioned (e.g., multiple modes or discontinuities);
+3.  NS can simultaneously estimate a model's evidence and its posterior distribution, and;
+4.  NS provides natural stopping criteria—no need for burn-in or manual convergence checks.
 
 ## Nested Sampling in Ernest
 
@@ -63,7 +63,7 @@ ernest provides a native R and C++11 implementation of nested sampling, with an 
 
 To begin, specify a likelihood function and a prior space. For example:
 
-```r
+``` r
 library(ernest)
 library(LaplacesDemon)
 
@@ -107,11 +107,11 @@ For advanced usage, including custom priors and hierarchical models, see the pac
 Below are selected packages that implement NS, in addition to nestle and dynesty:
 
 | Package | Author | Languages |
-|:-------|:------:|:---------:|
-|[polychord](https://github.com/PolyChord/PolyChordLite)|Will Handley, Mike Hobson, & Anthony Lasenby|Fortran, with Python and C/C++ interfaces|
-|[MultiNest](https://github.com/JohannesBuchner/MultiNest)|Farhan Feroz & Mike Hobson|Fortran, with R, Python, and C++ interfaces|
-|[perfectns](https://github.com/ejhigson/perfectns)|Edward Higson|Python|
+|:---------------------|:--------------------:|:---------------------------:|
+| [polychord](https://github.com/PolyChord/PolyChordLite) | Will Handley, Mike Hobson, & Anthony Lasenby | Fortran, with Python and C/C++ interfaces |
+| [MultiNest](https://github.com/JohannesBuchner/MultiNest) | Farhan Feroz & Mike Hobson | Fortran, with R, Python, and C++ interfaces |
+| [perfectns](https://github.com/ejhigson/perfectns) | Edward Higson | Python |
 
-The nestcheck Python package provides routines for diagnosing nested sampling runs [@anesthetic].
+In addition, the nestcheck Python package provides routines for diagnosing nested sampling runs [@anesthetic].
 
 ### References
